# DUKTEEP-data-analyse

./: .gitignore  compose.yml  config.py  data_analyse.py  data_getter.py  db.py  dfs.pkl  main.py  pyproject.toml  ty.toml
data/: dukteepers_2026-04-04_14-46-54.parquet  dukteepers_2026-04-05_02-10-50.parquet  old_dbs.parquet
face_recognition/: registration.py  search.py
scripts/: db_test.py  detect_dukteepers.py  frame_sampler.py  main.py  save_old_dbs.py
video/: downloader.py  metadata.py
