[project]
name = "youtube-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "deepface>=0.0.99",
    "icecream>=2.1.10",
    "marimo>=0.21.1",
    "opencv-python>=4.13.0.92",
    "polars>=1.39.3",
    "psycopg>=3.3.3",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
