[project]
name = "youtube-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.99",
    "keras>=2.15.0",
    "pandas>=2.3.3",
    "pgvector>=0.4.2",
    "psycopg>=3.3.3",
    "tensorflow[and-cuda]==2.15.1",
    "tf-keras>=2.15.1",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
