[project]
name = "youtube-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "deepface>=0.0.99",
    "fastparquet>=2026.3.0",
    "keras>=2.15.0",
    "marimo>=0.22.4",
    "nltk>=3.9.4",
    "pandas>=2.3.3",
    "pgvector>=0.4.2",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pydantic-ai>=0.8.1",
    "ruff>=0.15.9",
    "sqlalchemy>=2.0.49",
    "srt>=3.5.3",
    "tensorflow[and-cuda]==2.15.1",
    "tf-keras>=2.15.1",
    "tqdm>=4.67.3",
    "ty>=0.0.28",
    "wordcloud>=1.9.6",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
